[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Test/Test_Player.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Assets/Test/Use_Tooltip_Icon_H64.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="SpatialMaterial" id=1]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.792157, 0.639216, 0.603922, 1 )

[sub_resource type="CapsuleShape" id=2]
radius = 0.791935
height = 2.03117

[sub_resource type="CylinderShape" id=3]
height = 4.0

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody"]
input_ray_pickable = false
collision_mask = 14
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
material_override = SubResource( 1 )
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.79483, 0 )
shape = SubResource( 2 )

[node name="Interaction_Area" type="Area" parent="."]
collision_mask = 31

[node name="CollisionShape2" type="CollisionShape" parent="Interaction_Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1 )
shape = SubResource( 3 )

[node name="HintContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HintContainer"]
margin_left = 98.0
margin_top = 32.0
margin_right = 98.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="HintContainer"]
margin_right = 196.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 98, 32 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HintContainer/HBoxContainer"]
margin_right = 135.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Hint" type="Label" parent="HintContainer/HBoxContainer"]
margin_left = 139.0
margin_top = 14.0
margin_right = 196.0
margin_bottom = 50.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "ñññ"
[connection signal="body_entered" from="Interaction_Area" to="." method="_on_Interaction_Area_body_entered"]
[connection signal="body_exited" from="Interaction_Area" to="." method="_on_Interaction_Area_body_exited"]
